crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_labeled_rel.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n)-[r:KNOWS]->(m) RETURN n\")"
---
MATCH (n)-[r:KNOWS]->(m)
RETURN n
