crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_property_map.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n {name: 'Alice'}) RETURN n\")"
---
MATCH (n {name: 'Alice'})
RETURN n
