crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_relationship.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n)-[r]->(m) RETURN n, r, m\")"
---
MATCH (n)-[r]->(m)
RETURN n, r, m
