crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n\")"
---
MATCH (n)
RETURN n
