crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_return_uppercase.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"match (n) return n\")"
---
MATCH (n)
RETURN n
