crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_where_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.age > 21 RETURN n\")"
---
MATCH (n)
WHERE n.age > 21
RETURN n
