crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_with_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WITH n RETURN n\")"
---
MATCH (n)
WITH n
RETURN n
