crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_return_alias.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n.name AS name, n.age AS age\")"
---
MATCH (n)
RETURN n.name AS name, n.age AS age
