crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_return_distinct.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN DISTINCT n\")"
---
MATCH (n)
RETURN DISTINCT n
